objects/Incident__c.object
<CustomObject>
    <description>testing codescan description</description>
    <fields>
        <fullName>Class_of_Environment__c</fullName>
        <label>Class of Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_details__c</fullName>
        <label>Incident details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Restore_Reason__c</fullName>
        <label>Service Restore Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Restored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Restored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>incident_Type__c</fullName>
        <label>incident Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Blocker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INC-{0000}</displayFormat>
        <label>INC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <recordTypes>
        <fullName>Type</fullName>
        <active>true</active>
        <label>Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>